Add header and playing song display area

--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
 
 <body>
     <div class="container">
-
+      <div class="head-bar">
+        <span>Now Playing</span>
+      </div>
+      <div class="album-cover-img">
+        <img src="" alt="">
+      </div>
+      <div class="album-info">
+        <p class="name"></p>
+        <p class="artist"></p>
+      </div>
+  
     </div>
 </body>
 
