Added playlist queue styles to the musicplayer

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
           <i class="fa fa-play"></i>
         </div>
         <i id="next-btn" class="fa fa-fast-forward"></i>
-        <i id="music-list" class="fa fa-list"></i>
+        <i id="music-list" class="fa fa-list-alt"></i>
       </div>
   
     </div>
-    
+
 </body>
 
 </html>
