Update playlist array to the musicplayer

--- a/index.html
+++ b/index.html
@@ -62,16 +62,17 @@
           <i id="closelist" class="fa fa-close"></i>
         </div>
         <div>
-            <input type="text" id="filterInput" placeholder="Search by Song name">
-        
           <ul>
          
           </ul>
-          </div>
+        </div>
       </div>
   
     </div>
 
+    <script src="./js/playlist.js"></script>
+    <script src="./js/script.js"></script>
+  
 </body>
 
 </html>
